fix : fix the alignment in cart section

--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -32,6 +32,7 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
+    margin-top: 55px;
 }
 
 .header h1 {
